--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "15.1.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
