--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-  ],
+, "jest.config.js"  ],
   "exclude": [
     "node_modules"
   ]
