--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@tanstack/react-query": "^5.83.0",
     "framer-motion": "^12.34.0",
     "lucide-react": "^0.462.0",
-    "next": "15.1.0",
+    "next": "^15.0.4",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
