--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,8 +34,9 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts"
-, "jest.config.js"  ],
+    "**/*.mts",
+    "jest.config.js"
+  ],
   "exclude": [
     "node_modules"
   ]
