--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroui/toast": "^2.0.21",
     "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-query": "^5.83.0",
+    "@vercel/analytics": "^1.6.1",
     "framer-motion": "^12.34.0",
     "lucide-react": "^0.462.0",
     "next": "^15.0.8",
